# food-api-service

./: ..zshrc.swp  .envrc.example  .gitignore  Pipfile  README.md  alembic.ini.example  main.py  models.db  pyproject.toml
migrations/: env.py
migrations/versions/: 0a94dcf9ca52_initial.py  3f1dc9984b47_descripción_de_la_migración.py  5a99673eaf58_descripción_de_la_migración.py
prueba/: pyproject.toml
recetasback/: main.py
recetasback/adapters/: endpoints.py
recetasback/database/: database.py
recetasback/dependencies/: containers.py  database.py
recetasback/models/: models.py  recipe.py  user.py
recetasback/routers/: endpoints.py  random_recipe_routers.py  recipe_routers.py  reciper_routers.py
recetasback/schemas/: schemas.py
recetasback/services/: random_recipe_service.py  recipe.service.py  recipe_service.py  services.py  spoonacular_api.py  user.service.py
